img folder added

--- a/product.html
+++ b/product.html
@@ -13,16 +13,16 @@
     <div class="main">
         <div class="product_container">
             <div class="products">
-                <div class="imge"><img src="fairness-cream-500x500.jpg"
+                <div class="imge"><img src="img/fairness-cream-500x500.jpg"
                         alt=""></div>
                 <a href="" class="catagory">Cream</a>
                 <a href="" class="product_name">Ponds super Light ... </a>
                 <span class="rating">
-                    <img src="star.svg" alt="">
-                    <img src="star.svg" alt="">
-                    <img src="star.svg" alt="">
-                    <img src="star.svg" alt="">
-                    <img src="star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
                 </span>
                 <span class="price"> ৳ ১০০</span>
                 <div class="q-c">
@@ -32,96 +32,159 @@
                         <div class="plus">+</div>
                     </div>
 
-                    <div class="cart"><img src="cart.svg" alt=""></div>
+                    <div class="cart"><img src="img/cart.svg" alt=""></div>
+                </div>
+            </div>  
+            <div class="products">
+                <div class="imge"><img src="img/fairness-cream-500x500.jpg"
+                        alt=""></div>
+                <a href="" class="catagory">Cream</a>
+                <a href="" class="product_name">Ponds super Light ... </a>
+                <span class="rating">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                </span>
+                <span class="price"> ৳ ১০০</span>
+                <div class="q-c">
+                    <div class="quantities">
+                        <div class="minus">-</div>
+                        <div class="score">1</div>
+                        <div class="plus">+</div>
+                    </div>
+
+                    <div class="cart"><img src="img/cart.svg" alt=""></div>
                 </div>
 
 
             </div>
-            <div class="products"><div class="imge"><img src="fairness-cream-500x500.jpg"
-                alt=""></div>
-        <a href="" class="catagory">Cream</a>
-        <a href="" class="product_name">Ponds super Light ... </a>
-        <span class="rating">
-            <img src="star.svg" alt="">
-            <img src="star.svg" alt="">
-            <img src="star.svg" alt="">
-            <img src="star.svg" alt="">
-            <img src="star.svg" alt="">
-        </span>
-        <span class="price"> ৳ ১০০</span>
-        <div class="q-c">
-            <div class="quantities">
-                <div class="minus">-</div>
-                <div class="score">1</div>
-                <div class="plus">+</div>
-            </div>
+            <div class="products">
+                <div class="imge"><img src="img/fairness-cream-500x500.jpg"
+                        alt=""></div>
+                <a href="" class="catagory">Cream</a>
+                <a href="" class="product_name">Ponds super Light ... </a>
+                <span class="rating">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                </span>
+                <span class="price"> ৳ ১০০</span>
+                <div class="q-c">
+                    <div class="quantities">
+                        <div class="minus">-</div>
+                        <div class="score">1</div>
+                        <div class="plus">+</div>
+                    </div>
 
-            <div class="cart"><img src="cart.svg" alt=""></div>
-        </div></div>
-            <div class="products"><div class="imge"><img src="fairness-cream-500x500.jpg"
-                alt=""></div>
-        <a href="" class="catagory">Cream</a>
-        <a href="" class="product_name">Ponds super Light ... </a>
-        <span class="rating">
-            <img src="star.svg" alt="">
-            <img src="star.svg" alt="">
-            <img src="star.svg" alt="">
-            <img src="star.svg" alt="">
-            <img src="star.svg" alt="">
-        </span>
-        <span class="price"> ৳ ১০০</span>
-        <div class="q-c">
-            <div class="quantities">
-                <div class="minus">-</div>
-                <div class="score">1</div>
-                <div class="plus">+</div>
-            </div>
+                    <div class="cart"><img src="img/cart.svg" alt=""></div>
+                </div>
 
-            <div class="cart"><img src="cart.svg" alt=""></div>
-        </div></div>
-            <div class="products"><div class="imge"><img src="fairness-cream-500x500.jpg"
-                alt=""></div>
-        <a href="" class="catagory">Cream</a>
-        <a href="" class="product_name">Ponds super Light ... </a>
-        <span class="rating">
-            <img src="star.svg" alt="">
-            <img src="star.svg" alt="">
-            <img src="star.svg" alt="">
-            <img src="star.svg" alt="">
-            <img src="star.svg" alt="">
-        </span>
-        <span class="price"> ৳ ১০০</span>
-        <div class="q-c">
-            <div class="quantities">
-                <div class="minus">-</div>
-                <div class="score">1</div>
-                <div class="plus">+</div>
-            </div>
 
-            <div class="cart"><img src="cart.svg" alt=""></div>
-        </div></div>
-            <div class="products"><div class="imge"><img src="fairness-cream-500x500.jpg"
-                alt=""></div>
-        <a href="" class="catagory">Cream</a>
-        <a href="" class="product_name">Ponds super Light ... </a>
-        <span class="rating">
-            <img src="star.svg" alt="">
-            <img src="star.svg" alt="">
-            <img src="star.svg" alt="">
-            <img src="star.svg" alt="">
-            <img src="star.svg" alt="">
-        </span>
-        <span class="price"> ৳ ১০০</span>
-        <div class="q-c">
-            <div class="quantities">
-                <div class="minus">-</div>
-                <div class="score">1</div>
-                <div class="plus">+</div>
             </div>
+            <div class="products">
+                <div class="imge"><img src="img/fairness-cream-500x500.jpg"
+                        alt=""></div>
+                <a href="" class="catagory">Cream</a>
+                <a href="" class="product_name">Ponds super Light ... </a>
+                <span class="rating">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                </span>
+                <span class="price"> ৳ ১০০</span>
+                <div class="q-c">
+                    <div class="quantities">
+                        <div class="minus">-</div>
+                        <div class="score">1</div>
+                        <div class="plus">+</div>
+                    </div>
 
-            <div class="cart"><img src="cart.svg" alt=""></div>
-        </div></div>
-        </div>
+                    <div class="cart"><img src="img/cart.svg" alt=""></div>
+                </div>
+
+
+            </div>
+            <div class="products">
+                <div class="imge"><img src="img/fairness-cream-500x500.jpg"
+                        alt=""></div>
+                <a href="" class="catagory">Cream</a>
+                <a href="" class="product_name">Ponds super Light ... </a>
+                <span class="rating">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                </span>
+                <span class="price"> ৳ ১০০</span>
+                <div class="q-c">
+                    <div class="quantities">
+                        <div class="minus">-</div>
+                        <div class="score">1</div>
+                        <div class="plus">+</div>
+                    </div>
+
+                    <div class="cart"><img src="img/cart.svg" alt=""></div>
+                </div>
+
+
+            </div>
+            <div class="products">
+                <div class="imge"><img src="img/fairness-cream-500x500.jpg"
+                        alt=""></div>
+                <a href="" class="catagory">Cream</a>
+                <a href="" class="product_name">Ponds super Light ... </a>
+                <span class="rating">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                </span>
+                <span class="price"> ৳ ১০০</span>
+                <div class="q-c">
+                    <div class="quantities">
+                        <div class="minus">-</div>
+                        <div class="score">1</div>
+                        <div class="plus">+</div>
+                    </div>
+
+                    <div class="cart"><img src="img/cart.svg" alt=""></div>
+                </div>
+
+
+            </div>
+            <div class="products">
+                <div class="imge"><img src="img/fairness-cream-500x500.jpg"
+                        alt=""></div>
+                <a href="" class="catagory">Cream</a>
+                <a href="" class="product_name">Ponds super Light ... </a>
+                <span class="rating">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                    <img src="img/star.svg" alt="">
+                </span>
+                <span class="price"> ৳ ১০০</span>
+                <div class="q-c">
+                    <div class="quantities">
+                        <div class="minus">-</div>
+                        <div class="score">1</div>
+                        <div class="plus">+</div>
+                    </div>
+
+                    <div class="cart"><img src="img/cart.svg" alt=""></div>
+                </div>
+
+
+            </div>      
     </div>
 
 </body>
